(fix): the height now is screctchtable

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -972,6 +972,7 @@ input[type="submit"]:active,
     position: relative;
     text-align: center;
     width: 100%;
+    height: auto;
     display: block;
   }
 
